kubernetes/darkstar/apps/default/unifi/app/tlsroute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tlsroute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: unifi
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: unifi-tls
  hostnames:
    - "unifi.p.lan.starstreak.net"
  rules:
    - backendRefs:
        - name: unifi
          namespace: default
          port: 8443
